# is3d-native

./: .gitignore  AGENTS.md  README.md  environment.yml  pyproject.toml
configs/: train.yaml  train_stable_16g.yaml  train_stable_v2_16g.yaml
docs/: INTRO_TRAINING_COMMANDS.md  PROGRESS_AND_NEXT_2026-03-20.md  ROADMAP.md
scripts/: build.ps1  check_cross_platform_consistency.py  check_cuda_env.py  check_fastvit_deploy.py  check_operator_fallbacks.py  data_speed_test.py  download_co3d_dataset.py  export_model.py  infer_triplane.py  pack_webdataset.py  test.ps1  train_from_config.py  train_skeleton.py
src/is3d_native/: __init__.py  config.py  inference.py  training.py
src/is3d_native/models/: __init__.py  fastvit.py  model.py  ops.py  triplane.py
tests/: test_attention_ops.py  test_export_loading.py  test_fastvit_reparam.py  test_inference_chunking.py  test_training_resume.py  test_triplane_masking.py  test_version.py
